--- a/vt/specs/dialogue/basic.yaml
+++ b/vt/specs/dialogue/basic.yaml
@@ -53,7 +53,7 @@ resources:
               type: sprite
               width: 1400
               height: 300
-              url: 3kda832 # url: file:3kda832
+              url: 3kda832
               x: 0
               y: 0
             - id: dialogue-character-name
@@ -68,7 +68,7 @@ resources:
               type: "text"
               x: 20
               y: 100
-              content: "${dialogue.content}"
+              content: "${dialogue.content[0].text}"
               textStyle:
                 fontSize: 24
                 fill: "white"
@@ -94,14 +94,16 @@ story:
                   gui:
                     resourceId: fi3l
                   mode: adv
-                  content: Hello! Welcome to this visual novel.
+                  content:
+                    - text: Hello! Welcome to this visual novel.
                   characterId: ajf34a
             - id: line2
               actions: {}
             - id: line3
               actions:
                 dialogue:
-                  content: Here we are on the third line. The dialogue system is working!
+                  content:
+                    - text: Here we are on the third line. The dialogue system is working!
             - id: line4
               actions:
                 dialogue:
@@ -109,5 +111,6 @@ story:
             - id: line5
               actions:
                 dialogue:
-                  content: Hello! Welcome to this visual novel.
+                  content:
+                    - text: Hello! Welcome to this visual novel.
                   characterId: ajf34a
