--- a/vt/specs/layout/basic.yaml
+++ b/vt/specs/layout/basic.yaml
@@ -1,6 +1,13 @@
 ---
 title: "Sample"
 ---
+localization:
+  defaultPackageId: eklekfjwalefj
+  packages:
+    eklekfjwalefj:
+      label: English
+      lang: en
+      keys: {}
 screen:
   width: 1920
   height: 1080
@@ -8,12 +15,25 @@ screen:
 
 resources:
   layouts:
+    screen1:
+      elements:
+        - id: af32
+          type: rect
+          fill: "#000000"
+          width: 1920
+          height: 1080
+          click:
+            actionPayload:
+              actions:
+                nextLine: {}
     j3i8dk32:
       name: Title Screen
       elements:
         - id: bg
           type: sprite
-          url: file:lakjf3lka
+          url: dmni32
+          width: 1920
+          height: 1080
           x: 0
           y: 0
         - id: container
@@ -23,28 +43,16 @@ resources:
           children:
             - id: start23R
               type: text
-              text: Start
+              content: Start
               x: 0
               y: 0
-              style:
+              textStyle:
                 fontSize: 48
-                fill: "black"
-              hoverStyle:
-                fontSize: 48
-                fill: yellow
-            # - id: load
-            #   type: text
-            #   text: Load
-            #   height: 40
-            #   width: 200
-            #   x: 0
-            #   y: 0
-            #   style:
-            #     fontSize: 48
-            #     fill: "white"
-            #   hoverStyle:
-            #     fontSize: 48
-            #     fill: yellow
+                fill: "white"
+              hover:
+                textStyle:
+                  fontSize: 48
+                  fill: yellow
 
 story:
   initialSceneId: ajfl3a
@@ -58,5 +66,7 @@ story:
           lines:
             - id: line1
               actions:
+                screen:
+                  resourceId: screen1
                 layout:
-                  layoutId: j3i8dk32
+                  resourceId: j3i8dk32
