--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "route-engine-js",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "type": "module",
   "main": "dist/RouteEngine.js",
   "exports": {
@@ -24,7 +24,7 @@
     "immer": "^10.1.1",
     "jempl": "1.0.0",
     "js-yaml": "^4.1.0",
-    "puty": "^0.0.4-rc2"
+    "puty": "^0.0.6"
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^3.2.4",
