--- a/src/schemas/projectData/projectData.yaml
+++ b/src/schemas/projectData/projectData.yaml
@@ -20,21 +20,29 @@ properties:
     required: [width, height]
     additionalProperties: false
 
-  presets:
+  # used to manage main and replays, isolated variables
+  contexts:
     type: object
-    description: Collection of event handling presets
+    description: Contexts
     patternProperties:
-      "^[a-zA-Z0-9_-]+$":
-        $ref: "presets.yaml"
+      "^[a-zA-Z0-9]+$":
+        type: object
+        description: Context
+        properties:
+        additionalProperties: false
     additionalProperties: false
+
+  i18n:
+    $ref: "i18n.yaml"
+    description: Internationalization configuration with language packs and translations
 
   resources:
     $ref: "resources.yaml"
-    description: All project resources including images, audio, characters, etc.
+    description: All project resources including images, sounds, characters, etc.
 
   story:
     $ref: "story.yaml"
     description: Main story structure with scenes and sections
 
-required: [screen, presets, resources, story]
+required: [screen, i18n, resources, story]
 additionalProperties: false
