--- a/vt/specs/background/animation-1.yaml
+++ b/vt/specs/background/animation-1.yaml
@@ -2,19 +2,45 @@
 title: "Animation 1"
 description: Test animaton in , update, out
 ---
+localization:
+  defaultPackageId: eklekfjwalefj
+  packages:
+    eklekfjwalefj:
+      label: English
+      lang: en
+      keys: {}
 screen:
   width: 1920
   height: 1080
   backgroundColor: "#000000"
 
 resources:
+  layouts:
+    screen1:
+      elements:
+        - id: af32
+          type: rect
+          fill: "#000000"
+          width: 1920
+          height: 1080
+          click:
+            actionPayload:
+              actions:
+                nextLine: {}
+
   images:
     alkejf3la:
       fileId: lakjf3lka
+      width: 1920
+      height: 1080
     8a3lkja:
       fileId: dmni32
+      width: 1920
+      height: 1080
     3ljdasfjlk32:
       fileId: 23jkfa893
+      width: 1920
+      height: 1080
 
   animations:
     3lkj289:
@@ -55,17 +81,17 @@ story:
           lines:
             - id: line1
               actions:
+                screen:
+                  resourceId: screen1
                 background:
                   resourceId: alkejf3la
-                  resourceType: image
                   animations:
                     in:
                       animationId: 3lkj289
             - id: line2
               actions:
                 background:
-                  resourceId: alkejf3la
-                  resourceType: image
+                  resourceId: 8a3lkja
                   animations:
                     update:
                       animationId: k38df
@@ -75,4 +101,4 @@ story:
                   animations:
                     out:
                       animationId: 8h3js
-                      resourceId: alkejf3la
+                      resourceId: 3ljdasfjlk32
