--- a/vt/specs/bgm/basic.yaml
+++ b/vt/specs/bgm/basic.yaml
@@ -1,6 +1,13 @@
 ---
 title: "Sample"
 ---
+localization:
+  defaultPackageId: eklekfjwalefj
+  packages:
+    eklekfjwalefj:
+      label: English
+      lang: en
+      keys: {}
 screen:
   width: 1920
   height: 1080
@@ -13,6 +20,17 @@ resources:
     93k22:
       fileId: xk393
   layouts:
+    screen1:
+      elements:
+        - id: af32
+          type: rect
+          fill: "#000000"
+          width: 1920
+          height: 1080
+          click:
+            actionPayload:
+              actions:
+                nextLine: {}
     storyScreenLayout:
       name: Story Screen Background
       elements:
@@ -56,8 +74,7 @@ story:
             - id: line1
               actions:
                 screen:
-                  resourceId: storyScreenLayout
-                  resourceType: layout
+                  resourceId: screen1
                 bgm:
                   audioId: dk392
                 dialogue:
