--- a/vt/specs/dialogue/basic.yaml
+++ b/vt/specs/dialogue/basic.yaml
@@ -1,6 +1,13 @@
 ---
 title: "Basic"
 ---
+localization:
+  defaultPackageId: eklekfjwalefj
+  packages:
+    eklekfjwalefj:
+      label: English
+      lang: en
+      keys: {}
 screen:
   width: 1920
   height: 1080
@@ -8,6 +15,17 @@ screen:
 
 resources:
   layouts:
+    screen1:
+      elements:
+        - id: af32
+          type: rect
+          fill: "#000000"
+          width: 1920
+          height: 1080
+          click:
+            actionPayload:
+              actions:
+                nextLine: {}
     storyScreenLayout:
       name: Story Screen Background
       elements:
@@ -33,23 +51,25 @@ resources:
           children:
             - id: "bfeawjk2g"
               type: sprite
-              url: file:3kda832 # url: file:3kda832
+              width: 1400
+              height: 300
+              url: 3kda832
               x: 0
               y: 0
             - id: dialogue-character-name
               type: text
-              text: "${dialogue.character.name}"
+              content: "${dialogue.character.name}"
               x: 20
               y: 40
-              style:
+              textStyle:
                 fontSize: 24
                 fill: "white"
             - id: dialogue-text
               type: "text"
               x: 20
               y: 100
-              text: "${dialogue.content}"
-              style:
+              content: "${dialogue.content[0].text}"
+              textStyle:
                 fontSize: 24
                 fill: "white"
   characters:
@@ -69,18 +89,21 @@ story:
             - id: line1
               actions:
                 screen:
-                  resourceId: storyScreenLayout
-                  resourceType: layout
+                  resourceId: screen1
                 dialogue:
-                  layoutId: fi3l
-                  content: Hello! Welcome to this visual novel.
+                  gui:
+                    resourceId: fi3l
+                  mode: adv
+                  content:
+                    - text: Hello! Welcome to this visual novel.
                   characterId: ajf34a
             - id: line2
               actions: {}
             - id: line3
               actions:
                 dialogue:
-                  content: Here we are on the third line. The dialogue system is working!
+                  content:
+                    - text: Here we are on the third line. The dialogue system is working!
             - id: line4
               actions:
                 dialogue:
@@ -88,5 +111,6 @@ story:
             - id: line5
               actions:
                 dialogue:
-                  content: Hello! Welcome to this visual novel.
+                  content:
+                    - text: Hello! Welcome to this visual novel.
                   characterId: ajf34a
