--- a/vt/specs/dialogue/with-background.yaml
+++ b/vt/specs/dialogue/with-background.yaml
@@ -1,6 +1,13 @@
 ---
 title: "With background"
 ---
+localization:
+  defaultPackageId: eklekfjwalefj
+  packages:
+    eklekfjwalefj:
+      label: English
+      lang: en
+      keys: {}
 screen:
   width: 1920
   height: 1080
@@ -8,6 +15,17 @@ screen:
 
 resources:
   layouts:
+    screen1:
+      elements:
+        - id: af32
+          type: rect
+          fill: "#000000"
+          width: 1920
+          height: 1080
+          click:
+            actionPayload:
+              actions:
+                nextLine: {}
     storyScreenLayout:
       name: Story Screen Background
       elements:
@@ -24,7 +42,6 @@ resources:
               nextLine: {}
     fi3l:
       name: Dialogue Screen
-      mode: "adv"
       elements:
         - id: dialogue-container
           type: "container"
@@ -33,23 +50,25 @@ resources:
           children:
             - id: "bfeawjk2g"
               type: sprite
-              url: file:3kda832 # url: file:3kda832
+              width: 1400
+              height: 300
+              url: 3kda832
               x: 0
               y: 0
             - id: dialogue-character-name
               type: text
-              text: "${dialogue.character.name}"
+              content: "${dialogue.character.name}"
               x: 20
               y: 40
-              style:
+              textStyle:
                 fontSize: 24
                 fill: "white"
             - id: dialogue-text
               type: "text"
               x: 20
               y: 100
-              text: "${dialogue.content}"
-              style:
+              content: "${dialogue.content[0].text}"
+              textStyle:
                 fontSize: 24
                 fill: "white"
   animations:
@@ -68,10 +87,16 @@ resources:
   images:
     alkejf3la:
       fileId: lakjf3lka
+      width: 1920
+      height: 1080
     8a3lkja:
       fileId: dmni32
+      width: 1920
+      height: 1080
     3ljdasfjlk32:
       fileId: 23jkfa893
+      width: 1920
+      height: 1080
 
 story:
   initialSceneId: ajfl3a
@@ -86,31 +111,35 @@ story:
             - id: line1
               actions:
                 screen:
-                  resourceId: storyScreenLayout
-                  resourceType: layout
+                  resourceId: screen1
                 dialogue:
-                  layoutId: fi3l
-                  content: Hello! Welcome to this visual novel.
+                  gui:
+                    resourceId: fi3l
+                  mode: adv
+                  content:
+                    - text: Hello! Welcome to this visual novel.
                   characterId: ajf34a
             - id: line2
               actions:
                 background:
                   resourceId: alkejf3la
-                  resourceType: image
                   animations:
                     in: 3lkj289
             - id: line3
               actions:
                 dialogue:
-                  content: This is the second line of dialogue. Click to continue.
+                  content:
+                    - text: This is the second line of dialogue. Click to continue.
                   characterId: ajf34a
             - id: line4
               actions:
                 dialogue:
-                  content: Here we are on the third line. The dialogue system is working!
+                  content:
+                    - text: Here we are on the third line. The dialogue system is working!
                   characterId: ajf34a
             - id: line5
               actions:
                 dialogue:
-                  content: This is the final line. Thank you for testing the dialogue feature.
+                  content:
+                    - text: This is the final line. Thank you for testing the dialogue feature.
                   characterId: ajf34a
