--- a/vt/specs/visual/transform.yaml
+++ b/vt/specs/visual/transform.yaml
@@ -1,17 +1,40 @@
 ---
 title: "Sample"
 ---
+localization:
+  defaultPackageId: eklekfjwalefj
+  packages:
+    eklekfjwalefj:
+      label: English
+      lang: en
+      keys: {}
 screen:
   width: 1920
   height: 1080
   backgroundColor: "#000000"
 
 resources:
-  visuals:
+  layouts:
+    screen1:
+      elements:
+        - id: af32
+          type: rect
+          fill: "#000000"
+          width: 1920
+          height: 1080
+          click:
+            actionPayload:
+              actions:
+                nextLine: {}
+  images:
     alkejf3la:
-      fileId: la3lka
+      fileId: x342fga
+      width: 100
+      height: 100
     8a3lkja:
       fileId: a32kf3
+      width: 150
+      height: 150
   transforms:
     iasdlf:
       x: 500
@@ -31,11 +54,12 @@ story:
           lines:
             - id: line1
               actions:
+                screen:
+                  resourceId: screen1
                 visual:
                   items:
                     - id: visual-1
                       resourceId: alkejf3la
-                      resourceType: visual
                       transformId: iasdlf
             - id: line2
               actions:
@@ -43,9 +67,7 @@ story:
                   items:
                     - id: visual-1
                       resourceId: alkejf3la
-                      resourceType: visual
                       transformId: iasdlf
                     - id: visual-2
                       resourceId: 8a3lkja
-                      resourceType: visual
                       transformId: a32kf3
