--- a/spec/system/selectors/selectRenderState.spec.yaml
+++ b/spec/system/selectors/selectRenderState.spec.yaml
@@ -104,7 +104,7 @@ out:
   audio:
     - id: "bgm"
       type: "sound"
-      url: "audio/cde.mp3"
+      src: "audio/cde.mp3"
       loop: true
       volume: 0.5
       delay: null
@@ -161,7 +161,7 @@ out:
   audio:
     - id: "bgm"
       type: "sound"
-      url: "audio/cde.mp3"
+      src: "audio/cde.mp3"
       loop: true
       volume: 0.5
       delay: null
